--- a/pilecode.vcxproj.filters
+++ b/pilecode.vcxproj.filters
@@ -93,6 +93,12 @@
     <ClInclude Include="..\arctic\engine\vec4si32.h">
       <Filter>engine</Filter>
     </ClInclude>
+    <ClInclude Include="src\pilecode.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\data.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\arctic\engine\arctic_input.cpp">
@@ -126,6 +132,12 @@
       <Filter>engine</Filter>
     </ClCompile>
     <ClCompile Include="src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\data.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\pilecode.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
