--- a/pilecode.vcxproj.filters
+++ b/pilecode.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="src\defs.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\levels.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\arctic\engine\arctic_input.cpp">
@@ -147,6 +150,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\graphics.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\levels.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
