--- a/pilecode.vcxproj.filters
+++ b/pilecode.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="src\ui.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\music.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\arctic\engine\arctic_input.cpp">
@@ -162,6 +165,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\game.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\music.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
