--- a/pilecode.vcxproj
+++ b/pilecode.vcxproj
@@ -206,6 +206,8 @@
     <ClInclude Include="src\levels.h" />
     <ClInclude Include="src\music.h" />
     <ClInclude Include="src\pilecode.h" />
+    <ClInclude Include="src\result.h" />
+    <ClInclude Include="src\sfx.h" />
     <ClInclude Include="src\ui.h" />
   </ItemGroup>
   <ItemGroup>
@@ -226,6 +228,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\music.cpp" />
     <ClCompile Include="src\pilecode.cpp" />
+    <ClCompile Include="src\sfx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
