--- a/pilecode.vcxproj.filters
+++ b/pilecode.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClInclude Include="src\music.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\result.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\sfx.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\arctic\engine\arctic_input.cpp">
@@ -168,6 +174,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\music.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\sfx.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
