now data folder can be generated from data-src by Makefile

--- a/data-src/Makefile
+++ b/data-src/Makefile
@@ -79,6 +79,7 @@ $(OBG)/pilecode-1680x1050.png: bg/bladez-fate/pilecode.svg
 game: $(GAME)/empty.tga $(GAME)/letter-frame.tga $(GAME)/spritesheet.tga $(GAME)/tile-mask.tga
 
 $(GAME)/%.tga: game/bladez-fate/%.tga
+	mkdir -p `dirname $@`
 	$(CP) $< $@
 
 $(OGAME)/spritesheet.png: game/bladez-fate/spritesheet.svg
@@ -86,7 +87,47 @@ $(OGAME)/spritesheet.png: game/bladez-fate/spritesheet.svg
 	$(INKSCAPE) -e `pwd`/$@ `pwd`/$<
 
 ################################################################################
+# RULERS FOR music FOLDER
+#
+music: $(MUSIC)/observing-the-star.ogg
+
+$(MUSIC)/%.ogg: music/cc0/%.ogg
+	mkdir -p `dirname $@`
+	$(CP) $< $@
+
+################################################################################
+# RULERS FOR sfx FOLDER
+#
+sfx: $(SFX)/click.wav $(SFX)/click_2.wav $(SFX)/negative_2.wav $(SFX)/positive.wav $(SFX)/read.wav $(SFX)/write.wav
+
+$(SFX)/%.wav: sfx/circlerun/%.wav
+	mkdir -p `dirname $@`
+	$(CP) $< $@
+
+$(SFX)/%.wav: sfx/lokif/%.wav
+	mkdir -p `dirname $@`
+	$(CP) $< $@
+
+################################################################################
+# RULERS FOR ui FOLDER
+#
+ui: $(UI)/button-x1.tga $(UI)/button-x2.tga $(UI)/button-x4.tga $(UI)/button-x8.tga $(UI)/down-arrow.tga $(UI)/fast-forward.tga $(UI)/minus.tga $(UI)/musical-note.tga $(UI)/palette.tga $(UI)/pause.tga $(UI)/play.tga $(UI)/plus.tga $(UI)/replay.tga $(UI)/rewind.tga $(UI)/up-arrow.tga
+
+$(UI)/%.tga: ui/bladez-fate/%.tga
+	mkdir -p `dirname $@`
+	$(CP) $< $@
+
+$(UI)/%.tga: ui/chanut/%.tga
+	mkdir -p `dirname $@`
+	$(CP) $< $@
+
+$(OUI)/palette.png: ui/bladez-fate/palette.svg
+	mkdir -p `dirname $@`
+	$(INKSCAPE) -e `pwd`/$@ `pwd`/$<
+
+################################################################################
 # COMMON RULES
 #
 $(DATA)/%.tga: $(OBJ)/%.png
+	mkdir -p `dirname $@`
 	$(CONVERT) $< $@
