disable xmas mod

--- a/data-src/Makefile
+++ b/data-src/Makefile
@@ -54,7 +54,7 @@ OUI = $(OBJ)/ui
 # Default: MOD = 
 # XMas: MOD = -xmas
 
-MOD = -xmas
+MOD = 
 
 ################################################################################
 # TOOLS
